[metadata]
name = certificate-manager-austinhellerrepo
version = 0.0.8
author = Austin Heller
description = A framework for creating certificates
url = https://github.com/AustinHellerRepo/CertificateManager
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operation System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.8
install_requires =
  common-austinhellerrepo@git+https://github.com/AustinHellerRepo/Common
  threading-austinhellerrepo@git+https://github.com/AustinHellerRepo/Threading
  socket-austinhellerrepo@git+https://github.com/AustinHellerRepo/Socket
  cryptography

[options.packages.find]
where = src
